[package]
name = "git-backport"
version = "0.0.0-dev"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"

[lib]

[[bin]]
name = "git-backport"
doc = false
required-features = ["bin-dependencies"]

[dependencies]
git2 = { version = "0.13.0", default-features = false }
log = "0.4.8"

# bin dependencies
simple_logger = { version = "1.6.0", optional = true }
structopt = { version = "0.3.12", optional = true }

[features]
bin-dependencies = ["simple_logger", "structopt"]
default = ["bin-dependencies"]